Add Logic for Orders Company

--- a/ArtStation_Dashboard/Views/Banner/_BannerTablePartial.cshtml
+++ b/ArtStation_Dashboard/Views/Banner/_BannerTablePartial.cshtml
@@ -46,7 +46,8 @@
             {
                 @foreach (var item in Model.Items)
                 {
-                    <tr>
+                    <tr style="cursor:pointer;"
+                        onclick="window.location='@Url.Action("Details", "Banner", new { id = item.Id })'">
                         <td>
 
                             <div>
