--- a/ArtStation_Dashboard/Views/Order/Index.cshtml
+++ b/ArtStation_Dashboard/Views/Order/Index.cshtml
@@ -135,5 +135,18 @@
         });
       });
     });
+
+         function handleRowClick(event, url) {
+                // Get the tag name of what was clicked
+                const tag = event.target.tagName.toLowerCase();
+
+                // Ignore clicks on inputs, selects, buttons, and links
+                if (tag === 'input' || tag === 'select' || tag === 'button' || tag === 'a') {
+                    return;
+                }
+
+                // Otherwise, navigate
+                window.location = url;
+            }
   </script>
 }
