--- a/ArtStation_Dashboard/Views/Banner/Index.cshtml
+++ b/ArtStation_Dashboard/Views/Banner/Index.cshtml
@@ -203,7 +203,18 @@
                 });
             });
         }
+           function handleRowClick(event, url) {
+                // Get the tag name of what was clicked
+                const tag = event.target.tagName.toLowerCase();
 
+                // Ignore clicks on inputs, selects, buttons, and links
+                if (tag === 'input' || tag === 'select' || tag === 'button' || tag === 'a') {
+                    return;
+                }
+
+                // Otherwise, navigate
+                window.location = url;
+            }
         $(document).ready(function () {
             loadBanners(1, currentStatus);
         });
