--- a/ArtStation_Dashboard/Views/Shared/_OurLayout.cshtml
+++ b/ArtStation_Dashboard/Views/Shared/_OurLayout.cshtml
@@ -136,7 +136,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link text-white " asp-action="Track" asp-controller="Purchase">
+                        <a class="nav-link text-white " asp-action="CompanyOrder" asp-controller="Order">
                             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
                                 <i class="fa-brands fa-product-hunt"></i>
                             </div>
@@ -149,17 +149,7 @@
        
              
                 
-                <li class="nav-item mt-3">
-                    <h6 class="ps-4 ms-2 text-uppercase text-xs text-white font-weight-bolder opacity-8">Account pages</h6>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white asp-action="GetUser" asp-Controller="User">
-                        <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-                            <i class="material-icons opacity-10">person</i>
-                        </div>
-                        <span class="nav-link-text ms-1">Profile</span>
-                    </a>
-                </li>
+               
               
             </ul>
         </div>
