--- a/ArtStation_Dashboard/Views/User/Details.cshtml
+++ b/ArtStation_Dashboard/Views/User/Details.cshtml
@@ -16,8 +16,13 @@
                     <h2 class="card-title mb-3">@Model.FullName</h2>
 
                     <ul class="list-group list-group-flush mt-4">
-                       
+                        @if (!(@Model.InActiveMessage == null))
+                        {
+                            <li class="list-group-item text-danger"><strong>@(("سبب تعطيل الحساب", "Reasome DeActivate Account").Localize(lang)) : </strong>@Model.InActiveMessage</li>
+                        }
+
                         <li class="list-group-item"><strong>@(("الهاتف المحمول", "Phone Number").Localize(lang)) : </strong>@Model.PhoneNumber</li>
+                      
                         @if (!(@Model.Email == null))
                         {
                             <li class="list-group-item"><strong>@(("إيميل", "Email").Localize(lang)) : </strong>@Model.Email</li>
