--- a/ArtStation_Dashboard/Views/Shared/_OurLayout.cshtml
+++ b/ArtStation_Dashboard/Views/Shared/_OurLayout.cshtml
@@ -136,7 +136,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link text-white " asp-action="CompanyOrder" asp-controller="Order">
+                        <a class="nav-link text-white " asp-action="OrderSections" asp-controller="Order">
                             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
                                 <i class="fa-brands fa-product-hunt"></i>
                             </div>
