--- a/ArtStation_Dashboard/Views/Shared/_OurLayout.cshtml
+++ b/ArtStation_Dashboard/Views/Shared/_OurLayout.cshtml
@@ -48,7 +48,7 @@
     <aside class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl    @(dir == "rtl" ? "fixed-end rotate-caret" : "fixed-start ms-3" )    bg-gradient-dark" id="sidenav-main">
         <div class="sidenav-header">
             <i class="fas fa-times p-3 cursor-pointer text-white opacity-5 position-absolute end-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
-            <a class="navbar-brand m-0" href=" https://demos.creative-tim.com/material-dashboard/pages/dashboard " target="_blank">
+            <a class="navbar-brand m-0" href="#">
                 <img src="~/Uploads/Logo/logo2.svg" class="navbar-brand-img h-100" alt="main_logo">
                 <span class="ms-1 font-weight-bold text-white">Art Station</span>
             </a>
@@ -417,88 +417,88 @@
         });
 
 
-        var ctx2 = document.getElementById("chart-line").getContext("2d");
+        // var ctx2 = document.getElementById("chart-line").getContext("2d");
 
-        new Chart(ctx2, {
-          type: "line",
-          data: {
-            labels: ["Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"],
-            datasets: [{
-              label: "Mobile apps",
-              tension: 0,
-              borderWidth: 0,
-              pointRadius: 5,
-              pointBackgroundColor: "rgba(255, 255, 255, .8)",
-              pointBorderColor: "transparent",
-              borderColor: "rgba(255, 255, 255, .8)",
-              borderColor: "rgba(255, 255, 255, .8)",
-              borderWidth: 4,
-              backgroundColor: "transparent",
-              fill: true,
-              data: [50, 40, 300, 320, 500, 350, 200, 230, 500],
-              maxBarThickness: 6
+        // new Chart(ctx2, {
+        //   type: "line",
+        //   data: {
+        //     labels: ["Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"],
+        //     datasets: [{
+        //       label: "Mobile apps",
+        //       tension: 0,
+        //       borderWidth: 0,
+        //       pointRadius: 5,
+        //       pointBackgroundColor: "rgba(255, 255, 255, .8)",
+        //       pointBorderColor: "transparent",
+        //       borderColor: "rgba(255, 255, 255, .8)",
+        //       borderColor: "rgba(255, 255, 255, .8)",
+        //       borderWidth: 4,
+        //       backgroundColor: "transparent",
+        //       fill: true,
+        //       data: [50, 40, 300, 320, 500, 350, 200, 230, 500],
+        //       maxBarThickness: 6
 
-            }],
-          },
-          options: {
-            responsive: true,
-            maintainAspectRatio: false,
-            plugins: {
-              legend: {
-                display: false,
-              }
-            },
-            interaction: {
-              intersect: false,
-              mode: 'index',
-            },
-            scales: {
-              y: {
-                grid: {
-                  drawBorder: false,
-                  display: true,
-                  drawOnChartArea: true,
-                  drawTicks: false,
-                  borderDash: [5, 5],
-                  color: 'rgba(255, 255, 255, .2)'
-                },
-                ticks: {
-                  display: true,
-                  color: '#f8f9fa',
-                  padding: 10,
-                  font: {
-                    size: 14,
-                    weight: 300,
-                    family: "Roboto",
-                    style: 'normal',
-                    lineHeight: 2
-                  },
-                }
-              },
-              x: {
-                grid: {
-                  drawBorder: false,
-                  display: false,
-                  drawOnChartArea: false,
-                  drawTicks: false,
-                  borderDash: [5, 5]
-                },
-                ticks: {
-                  display: true,
-                  color: '#f8f9fa',
-                  padding: 10,
-                  font: {
-                    size: 14,
-                    weight: 300,
-                    family: "Roboto",
-                    style: 'normal',
-                    lineHeight: 2
-                  },
-                }
-              },
-            },
-          },
-        });
+        //     }],
+        //   },
+        //   options: {
+        //     responsive: true,
+        //     maintainAspectRatio: false,
+        //     plugins: {
+        //       legend: {
+        //         display: false,
+        //       }
+        //     },
+        //     interaction: {
+        //       intersect: false,
+        //       mode: 'index',
+        //     },
+        //     scales: {
+        //       y: {
+        //         grid: {
+        //           drawBorder: false,
+        //           display: true,
+        //           drawOnChartArea: true,
+        //           drawTicks: false,
+        //           borderDash: [5, 5],
+        //           color: 'rgba(255, 255, 255, .2)'
+        //         },
+        //         ticks: {
+        //           display: true,
+        //           color: '#f8f9fa',
+        //           padding: 10,
+        //           font: {
+        //             size: 14,
+        //             weight: 300,
+        //             family: "Roboto",
+        //             style: 'normal',
+        //             lineHeight: 2
+        //           },
+        //         }
+        //       },
+        //       x: {
+        //         grid: {
+        //           drawBorder: false,
+        //           display: false,
+        //           drawOnChartArea: false,
+        //           drawTicks: false,
+        //           borderDash: [5, 5]
+        //         },
+        //         ticks: {
+        //           display: true,
+        //           color: '#f8f9fa',
+        //           padding: 10,
+        //           font: {
+        //             size: 14,
+        //             weight: 300,
+        //             family: "Roboto",
+        //             style: 'normal',
+        //             lineHeight: 2
+        //           },
+        //         }
+        //       },
+        //     },
+        //   },
+        // });
 
         var ctx3 = document.getElementById("chart-line-tasks").getContext("2d");
 
