--- a/ArtStation_Dashboard/Views/Shared/_OurLayout.cshtml
+++ b/ArtStation_Dashboard/Views/Shared/_OurLayout.cshtml
@@ -49,8 +49,8 @@
         <div class="sidenav-header">
             <i class="fas fa-times p-3 cursor-pointer text-white opacity-5 position-absolute end-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
             <a class="navbar-brand m-0" asp-action="Index" asp-controller="Home">
-                <img src="~/Uploads/Logo/logo2.svg" class="navbar-brand-img h-100" alt="main_logo">
-                <span class="ms-1 font-weight-bold text-white">Art Station</span>
+                <img src="~/Uploads/Logo/logo2.svg" class="navbar-brand-img h-100 ms-2 me-2 " alt="main_logo">
+                <span class="ms-1 font-weight-bold fw-bolder text-white  ms-2 me-2">Art Station</span>
             </a>
         </div>
         <hr class="horizontal light mt-0 mb-2">
